@@ -103,10 +103,7 @@ default_jobs = 10
 [Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
 :version = 0.001001
 
-[ReadmeAnyFromPod / @Author::KENTNL/ShippedReadme]
-filename = README
-location = build
-type = text
+[Pod2Readme / @Author::KENTNL/ShippedReadme]
 
 [ReadmeAnyFromPod / @Author::KENTNL/ReadmeAnyFromPod]
 filename = README.mkdn
@@ -192,6 +189,7 @@ Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
 Dist::Zilla::Plugin::MetaYAML = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
+Dist::Zilla::Plugin::Pod2Readme = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
