@@ -538,13 +538,7 @@ sub _configure_readmes {
   my ($self) = @_;
 
   # TODO: Go back to the otherone when it stops failing balls
-  $self->add_named_plugin(
-    'ShippedReadme' => 'ReadmeAnyFromPod' => {
-      filename => 'README',
-      type     => 'text',
-      location => 'build',
-    },
-  );
+  $self->add_named_plugin( 'ShippedReadme' => 'Pod2Readme' => {}, );
 
   my $type = $self->srcreadme;
 
