@@ -3,9 +3,12 @@
 {{$NEXT}}
  [Dependencies::Stats]
  - Dependencies changed since 2.022002, see misc/*.deps* for details
- - develop: ↑22 (recommends: ↑1)
- - runtime: ↑26
+ - develop: +1 ↑22 (recommends: ↑1)
+ - runtime: +1 ↑26
  - test: ↑1 (recommends: ↑1)
+
+ [Minor]
+ - Switch to Pod2Readme for shipped readme because I much prefer how it renders
 
 2.022002 2014-12-14T09:15:08Z ed0dd28
  [Dependencies::Stats]
